# GameOfLifeSDL

./: .gitignore  Building  CMakeLists.txt  Makefile  README.md  Successfully  colors.h  config.h  interpolations.h  main  main.cpp  make.bat  makefile  rgb.py
include/: config.h  interpolations.h  kernels.h
python_helpers/: color_maps.py  rgb.py
src/: main.cpp
tools/: kernels.py  rgb.py
